# cosm-report-bot

./: .env  .gitignore  Dockerfile-bot  Dockerfile-fapp  Dockerfile-parser  docker-compose.yaml  pyproject.toml
bot/: config.py  main.py
bot/callbacks/: core.py  date.py  services.py
bot/callbacks/schemas/: services.py
bot/handlers/: __init__.py  commands.py  photo.py  report.py
bot/logs/: setup_loguru.py
bot/menus/: core.py
bot/middlewares/: __init__.py  auth.py  s3.py  services.py  throttling.py  ydisk.py
bot/rds/: __init__.py
bot/schemas/: user.py
bot/services/: const.py  utils.py
bot/states/: report.py
bot/utils/: alerts.py
data_parser/: config.py  gsheet_client_secret.json  gsheet_service_account.json  main.py
data_parser/gsheets/: gsheets.py
data_parser/rds/: __init__.py
data_parser/services/: parser.py
data_parser/utils/: alerts.py
fapp/: main.py
