[tool.poetry]
name = "cosm-report-bot"
version = "0.1.0"
description = ""
authors = ["21size <askelpyrip@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.14.0"
loguru = "^0.7.2"
pygsheets = "^2.0.6"
httpx = "^0.27.2"
redis = "^5.2.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
aiogram-calendar = "^0.5.0"
aioboto3 = "^13.2.0"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
